# orangu

./: .gitignore  Cargo.toml  LEAN_CTX_LEFTOVER.md  README.md  install.cmd  install.sh  orangu-ratatui-migration-strategy.md  orangu.conf  planreview.md
.cargo/: audit.toml
.github/workflows/: ci.yml  publish-docs.yml  release.yml
contrib/shell/: README.md  _orangu  orangu.bash  orangu.fish
contrib/themes/: classic.theme  oranguday.theme  rosepine-moon.theme  tokyonight.theme
doc/: BUILDING.md  BUILD_MODEL.md  CONFIGURATION.md  COORDINATOR.md  DEVELOPERS.md  GETTING_STARTED.md  GGUF.md  SERVER.md  build_manual.sh
doc/etc/: orangu-coordinator.conf  orangu-gguf.conf  orangu.conf
doc/manual/: header-listings.tex  web-template.html
doc/manual/en/: 01-introduction.md  03-quickstart.md  20-configuration.md  30-tools.md  31-workspaces.md  32-skills.md  40-terminal.md  41-core_tools.md  41-review.md  42-git_tools.md  43-usage_tools.md  44-coordinator.md  45-gguf.md  46-server.md  70-dev.md  72-extra.md  73-openai.md  74-completions.md  75-compression.md  76-coordinator.md  77-gguf.md  78-server.md  79-bench.md
src/: compression.rs  compression_cache.rs  config.rs  context.rs  duplicates.rs  explorer.rs  hardware.rs  lib.rs  model_download.rs  model_spec.rs  session.rs  tools.rs  tui.rs  workspace_cache.rs  workspaces.rs
src/agents/: hooks.rs  mod.rs
src/context/: fragments.rs  world_state.rs
src/embeddings/: index.rs
src/graph/: cache.rs  extract.rs  html.rs  mod.rs  status.rs  store.rs
src/llm/: mod.rs  openai.rs
src/tui/: auto_review.rs  auto_review_native.rs  header.rs  helper.rs  mod.rs  renderer.rs  review.rs  review_native.rs  screen.rs  tests.rs  text.rs  theme.rs  widgets.rs
test/benchmarks/: compression.rs
tests/: install_test.sh
