[package]
name = "orangu"
version = "0.9.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A coding environment for OpenAI-compatible servers"
authors = ["Jesper Pedersen <jesperpedersen.db@gmail.com>"]

[[bin]]
name = "orangu"
path = "src/bin/orangu/main.rs"

[dependencies]
anyhow = "1.0.100"
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29.0"
home = "0.5.11"
html2text = "0.17.1"
ignore = "0.4.24"
markdown = "1.0.0"
printpdf = { version = "0.9.1", default-features = false, features = ["text_layout"] }
regex = "1.10"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rustyline = "18.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syntect = "5.3.0"
terminal_size = "0.4.1"
ttf-parser = "0.25.1"
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
infer = "0.19.0"
mime_guess = "2.0.5"
strum = "0.28.0"
strum_macros = "0.28.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "compression"
path = "test/benchmarks/compression.rs"
harness = false
