[package]
name = "orangu"
version = "0.11.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A coding environment for OpenAI-compatible servers"
authors = ["Jesper Pedersen <jesperpedersen.db@gmail.com>"]

[[bin]]
name = "orangu"
path = "src/bin/orangu/main.rs"

[dependencies]
anyhow = "1.0.100"
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29.0"
home = "0.5.11"
html2text = "0.17.1"
ignore = "0.4.24"
markdown = "1.0.0"
printpdf = { version = "0.10.0", default-features = false, features = ["text_layout"] }
regex = "1.10"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rust-fontconfig = "4.4.4"
rustyline = "18.0.1"
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syntect = "5.3.0"
terminal_size = "0.4.1"
ttf-parser = "0.25.1"
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
infer = "0.19.0"
mime_guess = "2.0.5"
strum = "0.28.0"
strum_macros = "0.28.0"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.26"
tree-sitter-ocaml = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-r = "1.3"
tree-sitter-zig = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.2"
tree-sitter-erlang = "0.19"
petgraph = "0.8.3"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "compression"
path = "test/benchmarks/compression.rs"
harness = false
