[package]
name = "orangu"
version = "0.12.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A coding environment for OpenAI-compatible servers"
authors = ["Jesper Pedersen <jesperpedersen.db@gmail.com>"]

[[bin]]
name = "orangu"
path = "src/bin/orangu/main.rs"

[[bin]]
name = "orangu-coordinator"
path = "src/bin/orangu-coordinator/main.rs"

[[bin]]
name = "orangu-server"
path = "src/bin/orangu-server/main.rs"

# Developer benchmarking tool (not part of the served product). Measures decode
# tok/s of any OpenAI-compatible server over HTTP — orangu-server or
# llama-server. Documented in doc/manual/en/79-bench.md.
[[bin]]
name = "orangu-bench"
path = "src/bin/orangu-bench/main.rs"

[dependencies]
anyhow = "1.0.103"
arboard = { version = "3.6.1", default-features = false }
axum = "0.8.9"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
home = "0.5.12"
html2text = "0.17.1"
ignore = "0.4.30"
markdown = "1.0.0"
printpdf = { version = "0.12.4", default-features = false, features = ["text_layout"] }
regex = "1.13"
rustc-hash = "2.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream", "blocking"] }
rust-fontconfig = "4.4.6"
rustyline = "18.0.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
shell-words = "1.1"
syntect = { version = "5.3.0", features = ["html"] }
terminal_size = "0.4.4"
ttf-parser = "0.25.1"
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.53.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
infer = "0.22.0"
mime_guess = "2.0.5"
base64 = "0.23.0"
pdf-extract = "0.12.0"
calamine = "0.36.0"
zip = "8.6.0"
quick-xml = "0.41.0"
strum = "0.28.0"
strum_macros = "0.28.0"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.26"
tree-sitter-ocaml = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-r = "1.3"
tree-sitter-zig = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.2"
tree-sitter-erlang = "0.19"
petgraph = "0.8.3"
tree-sitter = "0.26.11"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-typescript = "0.23.2"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
minijinja = "2.21"
minijinja-contrib = { version = "2.21", features = ["pycompat"] }
half = "2.7"
memmap2 = "0.9"
rand = "0.10"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
wgpu = { version = "30.0.0", default-features = false, features = ["vulkan", "metal", "dx12", "wgsl", "std"] }
# Raw-Vulkan decode-submit path (persistent command-buffer reuse). Pinned to
# the exact version wgpu-hal links so `ash::vk` handle types unify — a
# mismatched major would make `Buffer::as_hal`'s `vk::Buffer` a different,
# incompatible type. See engine/backend/vulkan_replay.rs.
ash = "0.38"
pollster = "1.0.1"
bytemuck = { version = "1.25.1", features = ["derive"] }
cudarc = { version = "0.19.8", features = ["cuda-12000"] }
opencl3 = "0.12.3"
cubecl-hip-sys = { version = "7", optional = true }
ratatui = "0.30.2"
ansi-to-tui = "8.0.1"
unicode-width = "0.2.2"
dark-light = "2.0.0"

[features]
rocm = ["dep:cubecl-hip-sys"]
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.27.0"
ratatui = "0.30.2"

[[bench]]
name = "compression"
path = "test/benchmarks/compression.rs"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = 1
panic = "unwind"
